postgres connection configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-EMBEDDINFG_MODEL= nomic-embed-text
+EMBEDDING_MODEL= nomic-embed-text
 EMBEDDING_URL= http://localhost:11434/api/embeddings
+
+PGHOST= localhost
+PGPORT= 5454
+PGDATABASE= embeddings_db
+PGUSER= postgres
+PGPASSWORD= 
