model configurations in env

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 EMBEDDING_MODEL=nomic-embed-text
 LLM_URL_EMBEDDING=http://localhost:11434/api/embeddings
 LLM_URL=http://localhost:11434
+CHAT_MODEL=gemma3:1b
 
 PGHOST=localhost
 PGPORT=5432
