--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,33 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.0
-certifi==2025.11.12
-charset-normalizer==3.4.4
-click==8.3.1
-dotenv==0.9.9
+# FastAPI and server
 fastapi==0.124.2
-h11==0.16.0
-httpcore==1.0.9
+uvicorn==0.38.0
+python-multipart==0.0.20
+starlette==0.50.0
+
+# Environment and configuration
+python-dotenv==1.2.1
+
+# LlamaIndex core and integrations
+llama-index-core==0.14.10
+llama-index-vector-stores-postgres==0.7.2
+llama-index-embeddings-ollama==0.8.4
+llama-index-llms-ollama==0.9.0
+
+# Database
+asyncpg==0.31.0
+psycopg2-binary==2.9.11
+pgvector==0.4.2
+
+# PDF extraction
+pymupdf==1.25.1
+
+# HTTP clients
 httpx==0.28.1
-idna==3.11
-ollama==0.6.1
+requests==2.32.5
+
+# Pydantic
 pydantic==2.12.5
 pydantic_core==2.41.5
-python-dotenv==1.2.1
-python-multipart==0.0.20
-requests==2.32.5
-starlette==0.50.0
-typing-inspection==0.4.2
+
+# Other dependencies
 typing_extensions==4.15.0
-urllib3==2.6.2
-uvicorn==0.38.0
-asyncpg==0.31.0
-pymupdf==1.25.1
